[gd_scene load_steps=12 format=3 uid="uid://dikq0vycgx3kt"]

[ext_resource type="PackedScene" uid="uid://b8xwphmndk8fr" path="res://levels/base_level.tscn" id="1_p5jp2"]
[ext_resource type="Script" path="res://levels/PartyGame/house.gd" id="2_hlqrf"]
[ext_resource type="PackedScene" uid="uid://164aiq1258ql" path="res://objects/awkward_trigger.tscn" id="2_kpem7"]
[ext_resource type="Resource" uid="uid://b8nbamo4w1o0e" path="res://awkward_scenarios/host_intro.tres" id="3_cngqg"]
[ext_resource type="Resource" uid="uid://6ksqfud44r8n" path="res://awkward_scenarios/refreshments.tres" id="3_k3mfd"]
[ext_resource type="Resource" uid="uid://bduax3q030g3l" path="res://awkward_scenarios/first_guest.tres" id="5_3hbit"]
[ext_resource type="PackedScene" uid="uid://dibhmbwefhtgx" path="res://objects/door_trigger.tscn" id="6_iw51m"]
[ext_resource type="PackedScene" uid="uid://qelvutlfkss6" path="res://objects/urinal.tscn" id="8_tx3fg"]
[ext_resource type="PackedScene" uid="uid://b7w8ywm4ik4mr" path="res://objects/bar_objects/beer.tscn" id="9_or2gu"]
[ext_resource type="PackedScene" uid="uid://b4tpbkr1myhou" path="res://objects/bar_objects/beer_mat.tscn" id="10_eurjs"]
[ext_resource type="PackedScene" uid="uid://on4yxagsgs2j" path="res://objects/NPC.tscn" id="11_3nige"]

[node name="Level" instance=ExtResource("1_p5jp2")]
script = ExtResource("2_hlqrf")
level_name = "Mingling"
music_track = "sensual"

[node name="TileMap" parent="." index="0"]
layer_0/name = "lower"
layer_0/tile_data = PackedInt32Array(65537, 0, 0, 1, 131072, 0, -65535, 131072, 0, 65538, 0, 0, 2, 131072, 0, -65534, 131072, 0, -65533, 131072, 0, 3, 131072, 0, 65539, 0, 0, 65540, 0, 0, 4, 131072, 0, -65532, 131072, 0, -65531, 131072, 0, 5, 131072, 0, 65541, 131072, 0, 131073, 131072, 0, 131074, 131072, 0, 131075, 131072, 0, 131076, 131072, 0, 131077, 131072, 0, -131067, 131072, 0, -131068, 0, 0, -131069, 0, 0, -131070, 0, 0, -131071, 0, 0, -1, 196608, 0, -65537, 0, 0, -196609, 0, 0, 65535, 196608, 0, 131071, 0, 0, 196607, 0, 0, 262143, 0, 0, -262145, 0, 0, -327681, 0, 0, -393217, 0, 0, 327679, 0, 0, 393215, 0, 0, 458751, 0, 0, 65536, 0, 0, -131072, 0, 0, -131073, 0, 0, -131065, 0, 0, -458753, 0, 0, -524288, 0, 0, -524287, 0, 0, -524286, 0, 0, -524285, 0, 0, -524284, 0, 0, -524283, 0, 0, -524282, 0, 0, -524281, 0, 0, -524280, 0, 0, -524279, 0, 0, -524278, 0, 0, -524277, 0, 0, -524276, 0, 0, -524275, 0, 0, -524274, 0, 0, -458738, 0, 0, -393202, 0, 0, -327666, 0, 0, -262130, 0, 0, -196594, 0, 0, -131058, 0, 0, -65522, 0, 0, 14, 0, 0, 65550, 0, 0, 131086, 0, 0, 196622, 0, 0, 262158, 0, 0, 327694, 0, 0, 393230, 0, 0, 458766, 0, 0, 524302, 0, 0, 589838, 0, 0, 655374, 0, 0, 655373, 0, 0, 655372, 0, 0, 655371, 0, 0, 655370, 0, 0, 655369, 0, 0, 655368, 0, 0, 655367, 0, 0, 655366, 0, 0, 655365, 0, 0, 655364, 0, 0, 655363, 0, 0, 655362, 0, 0, 655361, 0, 0, 655360, 0, 0, 720895, 0, 0, 655359, 0, 0, 589823, 0, 0, 524287, 0, 0, 65543, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -131059, 131073, 1342177281, 131079, 0, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 0, 393223, 0, 0, 458759, 0, 0, 524295, 0, 0, 589831, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 196608, 0, 393229, 0, 0, 458760, 262144, 0, 458761, 262144, 0, 458762, 262144, 0, 458763, 262144, 0, 458764, 262144, 0, 458765, 262144, 0, 524301, 262144, 0, 589837, 262144, 0, 589836, 262144, 0, 589835, 262144, 0, 589834, 262144, 0, 589833, 262144, 0, 589832, 262144, 0, 524296, 262144, 0, 524297, 262144, 0, 524298, 262144, 0, 524299, 262144, 0, 524300, 262144, 0, 196610, 131072, 0, 131072, 131072, 0, 196608, 131072, 0, 262144, 131072, 0, 327680, 131072, 0, 393216, 131072, 0, 458752, 131072, 0, 524288, 131072, 0, 589824, 131072, 0, 589825, 131072, 0, 524289, 131072, 0, 458753, 131072, 0, 393217, 131072, 0, 327681, 131072, 0, 262145, 131072, 0, 196609, 131072, 0, 262146, 131072, 0, 327682, 131072, 0, 393218, 131072, 0, 458754, 131072, 0, 524290, 131072, 0, 589826, 131072, 0, 589827, 131072, 0, 524291, 131072, 0, 458755, 131072, 0, 393219, 131072, 0, 327683, 131072, 0, 262147, 131072, 0, 196611, 131072, 0, 196612, 131072, 0, 262148, 131072, 0, 327684, 131072, 0, 393220, 131072, 0, 458756, 131072, 0, 524292, 131072, 0, 589828, 131072, 0, 589829, 131072, 0, 524293, 131072, 0, 458757, 131072, 0, 393221, 131072, 0, 327685, 131072, 0, 262149, 131072, 0, 196613, 131072, 0, 131078, 131072, 0, 196614, 131072, 0, 262150, 131072, 0, 327686, 131072, 0, 393222, 131072, 0, 458758, 131072, 0, 524294, 131072, 0, 589830, 131072, 0, 262155, 131072, 0, 196619, 131072, 0, 131082, 131072, 0, 131081, 131072, 0, 131080, 131072, 0, 196616, 131072, 0, 262152, 131072, 0, 327688, 131072, 0, 327689, 131072, 0, 262153, 131072, 0, 196617, 131072, 0, 196618, 131072, 0, 262154, 131072, 0, 327690, 131072, 0, 327691, 131072, 0, 327692, 131072, 0, 262156, 131072, 0, 196620, 131072, 0, 131084, 131072, 0, 131085, 131072, 0, 196621, 131072, 0, 262157, 131072, 0, 327693, 131072, 0, -327670, 131072, 0, -393206, 131072, 0, -458742, 131072, 0, -458743, 131072, 0, -458744, 131072, 0, -393208, 131072, 0, -327672, 131072, 0, -262136, 131072, 0, -196600, 131072, 0, -196599, 131072, 0, -262135, 131072, 0, -327671, 131072, 0, -393207, 131072, 0, -262134, 131072, 0, -196598, 131072, 0, -196597, 0, 0, -262133, 0, 0, -327669, 0, 0, -393205, 0, 0, -458741, 0, 0, -458740, 131073, 1342177281, -393204, 131073, 1342177281, -327668, 131073, 1342177281, -262132, 131073, 1342177281, -196596, 131073, 1342177281, -131060, 131073, 1342177281, -131061, 0, 0, -65525, 131072, 0, -65526, 131072, 0, -65527, 131072, 0, -65528, 131072, 0, -65529, 131072, 0, -65530, 131072, 0, -65536, 131072, 0, 0, 131072, 0, 6, 131072, 0, 7, 131072, 0, 8, 131072, 0, 9, 131072, 0, 10, 131072, 0, 11, 131072, 0, 12, 131072, 0, -65524, 131072, 0, -65523, 131072, 0, 13, 131072, 0, -196595, 131073, 1342177281, -262131, 131073, 1342177281, -327667, 131073, 1342177281, -393203, 131073, 1342177281, -458739, 131073, 1342177281, -262140, 131072, 0, -327676, 131072, 0, -393212, 131072, 0, -458748, 131072, 0, -458749, 131072, 0, -458750, 131072, 0, -458751, 131072, 0, -458752, 131072, 0, -393216, 131072, 0, -327680, 131072, 0, -262144, 131072, 0, -196608, 131072, 0, -196607, 131072, 0, -262143, 131072, 0, -327679, 131072, 0, -393215, 131072, 0, -393214, 131072, 0, -327678, 131072, 0, -262142, 131072, 0, -196606, 131072, 0, -196605, 131072, 0, -262141, 131072, 0, -327677, 131072, 0, -393213, 131072, 0, -196604, 131072, 0, -196603, 131072, 0, -262139, 131072, 0, -327675, 131072, 0, -393211, 131072, 0, -458747, 131072, 0, -458746, 131072, 0, -393210, 131072, 0, -393209, 131072, 0, -327673, 131072, 0, -262137, 131072, 0, -196602, 131072, 0, -196601, 131072, 0, -262138, 131072, 0, -327674, 131072, 0, -458745, 131072, 0, -131066, 131072, 0, 65542, 131072, 0, 65545, 131072, 0, 65544, 131072, 0, 131083, 131072, 0)
layer_1/tile_data = PackedInt32Array(65542, 196609, 0, 65541, 196609, 268435456, -131067, 196609, 805306368, 65544, 196609, 268435456, 65545, 196609, 0, -131066, 196609, 536870912, 458763, 65539, 3, 589833, 196611, 805306369, 327682, 131075, 2, 327681, 196611, 1342177280, 393218, 196611, 0, 262146, 196611, 805306368, 327683, 196611, 1610612736, 524288, 65539, 1610612738, -393213, 3, 0, -393215, 196611, 1342177280, -393211, 196611, 1610612736, -458748, 196611, 805306368, -458750, 196611, 805306368)

[node name="Player" parent="." index="1"]
position = Vector2(16, -16)
rotation = 6.28319
can_piss = false
base_embarrassment_increase = 1

[node name="RefreshmentsTrigger" parent="." index="2" instance=ExtResource("2_kpem7")]
position = Vector2(121, -108)
awkward_scenario = ExtResource("3_k3mfd")

[node name="FirstGuestTrigger" parent="." index="3" instance=ExtResource("2_kpem7")]
position = Vector2(123, 265)
awkward_scenario = ExtResource("5_3hbit")

[node name="HostAwkwardTrigger" parent="." index="4" instance=ExtResource("2_kpem7")]
position = Vector2(75, 0)
awkward_scenario = ExtResource("3_cngqg")

[node name="DoorTrigger" parent="." index="5" instance=ExtResource("6_iw51m")]
position = Vector2(399, 181)
is_enabled = false

[node name="Urinal" parent="." index="6" instance=ExtResource("8_tx3fg")]
position = Vector2(401, 304)
rotation = 3.14159

[node name="Beer" parent="." index="7" instance=ExtResource("9_or2gu")]
position = Vector2(80, -157)

[node name="Beer2" parent="." index="8" instance=ExtResource("9_or2gu")]
position = Vector2(93, -164)

[node name="Beer3" parent="." index="9" instance=ExtResource("9_or2gu")]
position = Vector2(81, -169)

[node name="Beer4" parent="." index="10" instance=ExtResource("9_or2gu")]
position = Vector2(76, -180)

[node name="Beer5" parent="." index="11" instance=ExtResource("9_or2gu")]
position = Vector2(89, -178)

[node name="Beer6" parent="." index="12" instance=ExtResource("9_or2gu")]
position = Vector2(76, -191)

[node name="Beer7" parent="." index="13" instance=ExtResource("9_or2gu")]
position = Vector2(88, -189)

[node name="Beer8" parent="." index="14" instance=ExtResource("9_or2gu")]
position = Vector2(87, -198)

[node name="Coaster" parent="." index="15" instance=ExtResource("10_eurjs")]
position = Vector2(149, -154)

[node name="Coaster2" parent="." index="16" instance=ExtResource("10_eurjs")]
position = Vector2(153, -197)

[node name="Coaster3" parent="." index="17" instance=ExtResource("10_eurjs")]
position = Vector2(149, -184)

[node name="Beer9" parent="." index="18" instance=ExtResource("9_or2gu")]
position = Vector2(147, -159)

[node name="Beer10" parent="." index="19" instance=ExtResource("9_or2gu")]
position = Vector2(149, -184)

[node name="Beer11" parent="." index="20" instance=ExtResource("9_or2gu")]
position = Vector2(142, -200)

[node name="NPC" parent="." index="21" instance=ExtResource("11_3nige")]
position = Vector2(107, 1)
rotation = -3.11333
dialogue_is_world = true
entered_text_array = []
exited_text_array = ["Oh, sorry, am I blocking the corridor?"]

[node name="NPC2" parent="." index="22" instance=ExtResource("11_3nige")]
position = Vector2(96, 287)
rotation = -0.665727
dialogue_is_world = true
entered_text_array = []
exited_text_array = ["..."]

[connection signal="trigger_done" from="RefreshmentsTrigger" to="." method="_on_refreshments_trigger_trigger_done"]
[connection signal="trigger_done" from="FirstGuestTrigger" to="." method="_on_cheese_trigger_trigger_done"]
[connection signal="trigger_done" from="HostAwkwardTrigger" to="." method="_on_host_awkward_trigger_trigger_done"]
